# ai-cli-apps

./: AGENTS.md  Cargo.toml  README.md  TODO.md
src/: actions.rs  cli.rs  main.rs  versions.rs
src/tools/: amp.rs  claude.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  cursor_agent.rs  gemini.rs  kilo.rs  mod.rs
